--- a/DogBreeds/DogBreeds/View/BreedView.xib
+++ b/DogBreeds/DogBreeds/View/BreedView.xib
@@ -3,52 +3,55 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BreedView" customModule="DogBreeds" customModuleProvider="target">
             <connections>
-                <outlet property="image" destination="21J-Nc-lJK" id="ZOL-sE-yeO"/>
-                <outlet property="titleLabel" destination="Ksb-ql-9dq" id="TnI-r0-NGn"/>
+                <outlet property="image" destination="YCf-Ix-ff4" id="lhp-4P-VBI"/>
+                <outlet property="titleLabel" destination="Nff-9l-3nl" id="zIA-eJ-hJe"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="fay-sI-Y6e" customClass="BreedView" customModule="DogBreeds" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="317" height="49"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+        <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="sxS-uA-gbp">
+            <rect key="frame" x="0.0" y="0.0" width="169" height="172"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ksb-ql-9dq">
-                    <rect key="frame" x="49" y="8" width="260" height="20.5"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dog" translatesAutoresizingMaskIntoConstraints="NO" id="21J-Nc-lJK">
-                    <rect key="frame" x="8" y="8" width="33" height="33"/>
-                    <constraints>
-                        <constraint firstAttribute="width" secondItem="21J-Nc-lJK" secondAttribute="height" multiplier="1:1" id="LLT-e7-zv0"/>
-                    </constraints>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YCf-Ix-ff4">
+                    <rect key="frame" x="0.0" y="0.0" width="169" height="172"/>
                 </imageView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ryv-1I-CQJ">
+                    <rect key="frame" x="0.0" y="103" width="169" height="69"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nff-9l-3nl">
+                            <rect key="frame" x="8" y="0.0" width="153" height="69"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="highlightedColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" red="0.21618445259999999" green="0.21618445259999999" blue="0.21618445259999999" alpha="0.44310876710000002" colorSpace="custom" customColorSpace="displayP3"/>
+                    <constraints>
+                        <constraint firstItem="Nff-9l-3nl" firstAttribute="leading" secondItem="ryv-1I-CQJ" secondAttribute="leading" constant="8" id="5BN-L5-CpB"/>
+                        <constraint firstAttribute="trailing" secondItem="Nff-9l-3nl" secondAttribute="trailing" constant="8" id="Hce-5V-OaZ"/>
+                        <constraint firstAttribute="bottom" secondItem="Nff-9l-3nl" secondAttribute="bottom" id="Svl-O4-XbK"/>
+                        <constraint firstItem="Nff-9l-3nl" firstAttribute="top" secondItem="ryv-1I-CQJ" secondAttribute="top" id="zrM-qu-5yr"/>
+                    </constraints>
+                </view>
             </subviews>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="21J-Nc-lJK" firstAttribute="top" secondItem="fay-sI-Y6e" secondAttribute="top" constant="8" id="FbL-D5-9VA"/>
-                <constraint firstItem="21J-Nc-lJK" firstAttribute="width" secondItem="21J-Nc-lJK" secondAttribute="height" multiplier="1:1" id="HNi-Ns-fE1"/>
-                <constraint firstAttribute="bottom" secondItem="21J-Nc-lJK" secondAttribute="bottom" constant="8" id="IQx-n3-YiN"/>
-                <constraint firstItem="Ksb-ql-9dq" firstAttribute="leading" secondItem="21J-Nc-lJK" secondAttribute="trailing" constant="8" id="URW-es-n4s"/>
-                <constraint firstItem="Ksb-ql-9dq" firstAttribute="top" secondItem="21J-Nc-lJK" secondAttribute="top" id="qCY-nB-l0c"/>
-                <constraint firstAttribute="trailing" secondItem="Ksb-ql-9dq" secondAttribute="trailing" constant="8" id="w3r-8k-l3P"/>
-                <constraint firstItem="21J-Nc-lJK" firstAttribute="leading" secondItem="fay-sI-Y6e" secondAttribute="leading" constant="8" id="xer-u9-KgG"/>
+                <constraint firstAttribute="bottom" secondItem="YCf-Ix-ff4" secondAttribute="bottom" id="0ho-U3-S4f"/>
+                <constraint firstAttribute="bottom" secondItem="ryv-1I-CQJ" secondAttribute="bottom" id="5y6-bT-K05"/>
+                <constraint firstItem="YCf-Ix-ff4" firstAttribute="leading" secondItem="sxS-uA-gbp" secondAttribute="leading" id="6HM-fi-jkT"/>
+                <constraint firstAttribute="trailing" secondItem="YCf-Ix-ff4" secondAttribute="trailing" id="KGq-B5-epQ"/>
+                <constraint firstAttribute="trailing" secondItem="ryv-1I-CQJ" secondAttribute="trailing" id="XtP-8z-ytY"/>
+                <constraint firstItem="ryv-1I-CQJ" firstAttribute="height" secondItem="sxS-uA-gbp" secondAttribute="height" multiplier="0.4" id="acv-V8-1Xy"/>
+                <constraint firstItem="ryv-1I-CQJ" firstAttribute="leading" secondItem="sxS-uA-gbp" secondAttribute="leading" id="pZc-2b-Lih"/>
+                <constraint firstItem="YCf-Ix-ff4" firstAttribute="top" secondItem="sxS-uA-gbp" secondAttribute="top" id="w4X-S9-pk8"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="-619.56521739130437" y="-503.23660714285711"/>
+            <point key="canvasLocation" x="-1199" y="-372"/>
         </view>
     </objects>
-    <resources>
-        <image name="dog" width="32" height="32"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
